# cworm

./: .gitignore  CMakeLists.txt  array.c  array.h  array_test.c  array_test.h  dict.c  dict.h  float.c  float.h  integer.c  integer.h  interpreter.c  interpreter.h  makefile  memory.c  memory.h  memory_test.c  memory_test.h  minunit.c  stdlib.c  stdlib.h  stdlib_test.h  stdutil.c  stdutil.h  stdutil_test.c  stdutil_test.h  string.c  string.h  testrun  worm_blog.txt
